plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'ch.gian'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

application {
    mainClass = 'gianspaceinvaders.main.Launcher'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.media', 'javafx.graphics']
}

test {
    useJUnitPlatform()
}